# pico

./: .gdbinit  .gitignore  MAINTAINERS.md  README.md  toast.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
main/: CMakeLists.txt
main/src/: main.c
